@@ -13,6 +13,9 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static java.lang.System.getenv;
 
 @Service
 @RequiredArgsConstructor
@@ -43,7 +46,9 @@ public class PostConverter {
                 .likeCnt(postEntity.getLikeCnt())
                 .userId(postEntity.getUserId())
                 .thumbnailUrl(postEntity.getThumbnailUrl())
-                .imageList(postEntity.getImages() == null ? List.of() : Arrays.stream(postEntity.getImages().split(",")).toList())
+                .imageList(postEntity.getImages() == null ? List.of() : Arrays.stream(postEntity.getImages().split(","))
+                    .map(image -> getenv().get("IMGUR_URL") + image)
+                    .collect(Collectors.toList()))
                 .commentList(commentList)
                 .createdBy(postEntity.getCreatedBy())
                 .createdAt(postEntity.getCreatedAt())
@@ -67,6 +72,10 @@ public class PostConverter {
                 .likeCnt(postDto.getLikeCnt())
                 .userId(postDto.getUserId())
                 .thumbnailUrl(postDto.getThumbnailUrl())
+                .images(postDto.getImageList().equals(List.of()) ? null : postDto.getImageList()
+                    .stream()
+                    .map(s -> s.replaceFirst(getenv().get("IMGUR_URL"), ""))
+                    .collect(Collectors.joining(",")))
                 .createdBy(postDto.getCreatedBy())
                 .createdAt(postDto.getCreatedAt())
                 .updatedBy(postDto.getUpdatedBy())
